@@ -1,5 +1,5 @@
 #
-# $Id: watcom.cf,v 1.13 2003/12/22 21:48:24 druzus Exp $
+# $Id: watcom.cf,v 1.14 2003/12/28 22:25:33 druzus Exp $
 #
 # The Harbour project
 # GNU MAKE file for Watcom C/C++ 10.x
@@ -18,10 +18,13 @@ CC_IN =
 CC_OUT = -fo=
 
 # important: -j is necessary for proper build
-CPPFLAGS = -j -w3 -d1 -5 -fp5 -onaehtzlr -oi+ -ei -zp8 -s -zq -zt0 -bt=DOS
-CPPFLAGS += -I. -I$(TOP)include -Iinclude
+# don't enable -ol optimization in OpenWatcom 1.1 - gives buggy code
+#CPPFLAGS = -j -w3 -d1 -5s -5r -fp5 -oehtz -s -zq -zt0 -bt=DOS
+CPPFLAGS =  -j -w3 -d1 -5 -fp5 -onaehtzr -oi+ -ei -zp8 -s -zq -zt0 -bt=DOS
+
+CPPFLAGS += -i. -i$(TOP)include -iinclude
 ifeq ($(HB_LIB_COMPILE),)
-    CPPFLAGS += -I$(HB_INC_COMPILE)
+    CPPFLAGS += -i$(HB_INC_COMPILE)
 endif
 
 # work arround to DOS command line size limit
